# my-tauri-react-app

./: Dockerfile  package-lock.json  package.json
.github/workflows/: build-arm.yml  build-armhf.yml
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
