[package]
name = "my-tauri-app"
version = "0.1.0"
edition = "2021"
description = "A minimal Tauri app for ARM"
authors = ["you"]

[lib]
name = "my_tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["wry"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[profile.release]
strip = true